# HACKDAY

./: README.md
Hackday2025/Finals/: README.md
Hackday2025/Finals/TheAethericMap/: README.md
Hackday2025/Finals/TheHearthOfGearford/: README.md  default  docker-compose.yml  dockerfile  flag.txt
Hackday2025/Qualif/: README.md
Hackday2025/Qualif/Copper Wire Extraction/: README.md  cookie_exfil.py
Hackday2025/Qualif/Copper Wire Extraction /: README.md
Hackday2025/Qualif/Internal Blog/: README.md
Hackday2025/Qualif/Open The Door/: README.md  app.py  docker-compose.yml  dockerfile  flag-app_adfthrieydndsjlsfnl.py  knockd.conf  requirements.txt  start.sh
Hackday2025/Qualif/The Internal Blog/: README.md  app.js  docker-compose.yml  dockerfile  package-lock.json  package.json
Hackday2026/Qualif/: README.md
Hackday2026/Qualif/As Small As Possible/: DH_oracle.py  README.md  docker-compose.yaml  dockerfile
Hackday2026/Qualif/Back To Super Increasing Era/: README.md  craft_flag.py  custom.py
Hackday2026/Qualif/Let's Meet/: Cargo.toml  README.md  docker-compose.yaml  dockerfile  initi_db.sh
Hackday2026/Qualif/Let's Meet/src/: api.rs  auth.rs  main.rs  routes.rs  structs.rs  utilities.rs
Hackday2026/Qualif/Let's Meet/static/css/: style.css  style2.css
Hackday2026/Qualif/Let's Meet/templates/: account.html.tera  book.html.tera  index.html.tera  login.html.tera  register.html.tera
Hackday2026/Qualif/The Lotery/: README.md  chall_hackday_wipin.c  flag.txt  index.data  index.html  index.js
Hackday2026/Qualif/The Roughness of Vigenere/: README.md  (+1 more)
(+24 files in other folders)
